--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "distro-front",
   "version": "0.1.0",
+  "proxy": "https://distro-app-api.herokuapp.com/",
   "private": true,
   "engines": {
     "npm": "6.14.4",
